[package]
name = "rasp_http"
version = "0.1.0"
authors = ["shanlihou"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version="*", features=["attributes"]}
http-types = "*"
async-h1 = "*"
sqlx = {version="*", features = [ "runtime-async-std", "macros", "sqlite" ]}
sqlx-core = "*"

[[bin]]
name = "rasp_server"

[[bin]]
name = "test_sqlite"